--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@
 .banner{
      width: 100%;
      height: 100vh;
-    
-     background-image:url(background.jpeg.jfif);
+      background-image:url(background.jpeg.jfif);
      background-position: center;
      background-attachment: fixed;
+    filter: brightness(1 1 5);
 }
 .navbar{
     width: 85%;
@@ -33,6 +33,7 @@
     margin: 15 20px;
     position: relative;
     color: black;
+    
 }
 .navbar ul li{
     text-decoration: none;
@@ -40,8 +41,9 @@
     text-transform: uppercase;
     justify-content: flex-end;
 }
-.navbar ul li::after{content: '20px';
-    height: 0px;
+.navbar ul li::after{
+    content: '';
+    height: 15 1px;
     width: 100%;
     background: #009688;
     position: absolute;
