--- a/style.css
+++ b/style.css
@@ -4,68 +4,94 @@
     font-family: 'Segoe UI';
     color: black solid;
     
-}
-.banner{
-     width: 100%;
-     height: 100vh;
-      background-image:url(background.jpeg.jfif);
-     background-position: center;
-     background-attachment: fixed;
-    filter: brightness(1 1 5);
-}
-.navbar{
-    width: 85%;
-    margin: auto;
-    padding: 35px 10;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-.logo{
-    width: 150px;
-    cursor: pointer;
-    color: rgb(7, 6, 6);
-}
-.navbar ul li a{
-    list-style: none;
-    display: inline-block;
-    margin: 15 20px;
-    position: relative;
-    color: black;
+} 
+.main{
+    width: 100%;
+    background:url(background2.jpeng.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    background-attachment: fixed;
     
 }
-.navbar ul li{
-    text-decoration: none;
-    color: black;
-    text-transform: uppercase;
-    justify-content: flex-end;
+.logo{
+    color: orangered;
+    font-family: Arial;
+    padding-left: 20%;
+    float: right;
+    padding-top: 10px;
+    font-size: 35px;
+    cursor: pointer;
 }
-.navbar ul li::after{
-    content: '';
-    height: 15 1px;
-    width: 100%;
-    background: #009688;
-    position: absolute;
-    left: 0%;}
 
-.content{
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: center;
-    color: rgba(0, 17, 255, 0.76);
+.menu{
+    width: 400%;
+    float: left;
+    height: 70px;
+}
+ul{
+    float: left;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+}
+ul li{
+    list-style: none;
+    margin-left: 45px;
+    margin-top: 27px;
+    font-size: 30px;
+}
+ul li a{
+    text-decoration: none;
+    color: aliceblue;
+    font-family: Arial;
+    font-weight: bold;
+    transition: 0.4s ease-in-out;
+}
+ul li a:hover{
+    color: black;
 }
 .content{
-     font-size: 70px;
-     margin-top: 80px;
+    width: 90px;
+    height: auto;
+    margin: auto;
+    color: aqua;
+    position: relative;
 }
-.content p{
-    margin: 20px;
-    font-weight: 100;
-    line-height: 25px;
+.content h1{
+    width: 90px;
+    font-size: 70px;
+    float: left;
+    padding-left: 20%;
+    justify-content: center;
+    padding-top: 0px;
+    color: blue;
 }
+.content h1:hover{
+    color: black;
+    cursor: pointer;
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create two equal columns that sits next to each other */
+  .column {
+    flex: 30%;
+    padding: 0 2px;
+  }
+  
+  .column img {
+    margin-top: 4px;
+    vertical-align: middle;
+  }
+
+
+
+
+
 
 
 
