--- a/style.css
+++ b/style.css
@@ -82,13 +82,15 @@ ul li a:hover{
     flex: 30%;
     padding: 0 2px;
   }
-  
- 
-  
-  .column{
-    margin-left: 20px; /* Moves the image 20px to the right */
-    margin-top: 20x;  /* Moves the image 10px down */
+.row{
+    
+  margin-left: 10px; /* Moves the image 20px to the right */
+  margin-top: 50px;  /* Moves the image 10px down */
+  padding-left: 20px; /* Moves the content of the image inside */
 }
+
+ 
+
 
 
 
