--- a/style.css
+++ b/style.css
@@ -83,24 +83,25 @@ ul li a:hover{
     padding: 0 2px;
   }
 .row{
-    
   margin-left: 10px; /* Moves the image 20px to the right */
   margin-top: 50px;  /* Moves the image 10px down */
   padding-left: 20px; /* Moves the content of the image inside */
 }
-
- 
-body {
+img{
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh; /* Full viewport height */
+  align-items: ;
+  height: 25pc; /* Full viewport height */
   margin: 10px; /* Remove default body margin */
 }
 
 p {
   text-align: center; /* Center the text inside the paragraph */
 }
+
+
+
+ 
 
 
 
