--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     
 } 
 .main{
-    width: 200%;
+    width: 100%;
     background:url(background2.jpeng.jpg);
     background-size: cover;
     background-position: center;
@@ -90,11 +90,13 @@ ul li a:hover{
 
 p {
   text-align: center; /* Center the text inside the paragraph */
-  margin: 10px;
-  display: flex;
-  justify-content: left;
-
-}
+  margin: 0%;
+  padding-left: 0%;
+  padding-bottom: 8%;
+  padding-block: 6%;
+  inline-size: 35%;
+  color: red;
+  }
 
 
 
