--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@
 }
 .main {
   width: 100%;
-  background: url(background2.jpeng.jpg);
+  background-image: url(background2.jpeng.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
   background-attachment: fixed;
+  
 }
 .logo {
   color: orangered;
@@ -49,22 +50,7 @@ ul li a {
 ul li a:hover {
   color: black;
 }
-.content {
-  width: 90px;
-  height: auto;
-  margin: auto;
-  color: aqua;
-  position: relative;
-}
-.content h1 {
-  width: 90px;
-  font-size: 70px;
-  float: left;
-  padding-left: 20%;
-  justify-content: center;
-  padding-top: 0px;
-  color: blue;
-}
+
 .content h1:hover {
   color: black;
   cursor: pointer;
@@ -81,20 +67,18 @@ ul li a:hover {
   padding: 0 20px;
 }
 .section1 {
+  
+   margin: 0%;
+  width: 800px;
+  font-size: 24px;
   float: left;
-
-  width: 300px;
-  font-size: 40px;
-  float: left;
-  padding-left: 10%;
-  justify-content: center;
-  padding-top: 20px;
-  color: blue;
+ padding: 20px;
+  margin-top: 0px;
 }
 .section2 {
   width: 300%;
   padding-left: 0%;
-  float: ;
+  
 }
 
 p {
